# pyside6_utils

./: README.md  pyproject.toml
src/pyside6_utils/: __init__.py  i18n.py
src/pyside6_utils/widgets/: __init__.py  about_box.py  actions.py  settings_dialog.py  utils.py
