[project]
name = "pyside6-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "app-settings",
    "pyside6>=6.9.0",
    "resource-getters>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
app-settings = { git = "https://github.com/RafalPadkowski/app_settings.git" }
